--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,10 +1,19 @@
 apply plugin: "java"
 apply plugin: 'kotlin'
+apply plugin: 'org.junit.platform.gradle.plugin'
+
+junitPlatform {
+    platformVersion = "1.0.0-M2"
+    engines {
+        include 'spek'
+    }
+}
 
 sourceCompatibility = 1.6
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
+sourceSets.test.java.srcDirs = [ "test/" ]
 
 
 eclipse.project {
@@ -12,11 +21,19 @@ eclipse.project {
 }
 buildscript {
     ext.kotlin_version = '1.1.1'
+
+    ext.mokito_kotlin_version = '1.4.0'
+    ext.spek_version = '1.0.89'
+    ext.junit_version = '5.0.0-ALPHA'
+    ext.junit_platform_gradle_plugin_version = '1.0.0-M2'
+    ext.hamkrest_version = '1.2.2.0'
+
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.junit.platform:junit-platform-gradle-plugin:$junit_platform_gradle_plugin_version"
     }
 }
 repositories {
@@ -24,4 +41,12 @@ repositories {
 }
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+
+    testCompile "org.junit:junit5-api:$junit_version"
+    testCompile "org.jetbrains.spek:spek-api:$spek_version"
+    testCompile "com.nhaarman:mockito-kotlin:$mokito_kotlin_version"
+    testCompile "com.natpryce:hamkrest:$hamkrest_version"
+
+    runtime "org.junit.platform:junit-platform-launcher:$junit_platform_gradle_plugin_version"
+    runtime "org.jetbrains.spek:spek-junit-platform-engine:$spek_version"
 }
